--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
 }
 
 main {
     display: flex;
     justify-content: center;
+    width: 100%;
 }
 
 form {
@@ -15,4 +17,21 @@ form {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+/* Hacer un grid*/
+.movies {
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 1rem;
+}
+
+.movie h3 , .movie p {
+    margin: 0;
+}
+
+.movie img {
+    border-radius: 8px;
+    margin-top: 16px;
 }
